# holomorphic_crack_detection

./: .gitignore  README.md  environment.yml  pyproject.toml  setup.py
.github/workflows/: pytest.yml
experiment_1/: exp_1_central_crack.py
experiment_1/fe_solution/: crack_reference.txt  strain_reference.txt
hnnga/: io.py  main.py  plot.py
test/: test_experiment_1.py
